@@ -1,4 +1,0 @@
-use strict;
-use warnings;
-use Test::More tests => 1;
-require_ok('Dist::Zilla::PluginBundle::AVAR');
